[gd_scene load_steps=4 format=3 uid="uid://b1w1bwehp14uq"]

[ext_resource type="Texture2D" uid="uid://beulqko0xc7fq" path="res://Resources/the-legend-of-zelda-breath-of-the-wild-artworks-dl-2222650990.jpg" id="1_ma5c6"]
[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_r3kum"]
[ext_resource type="FontFile" uid="uid://dihl7x3ibdr4r" path="res://Resources/Arthemis.ttf" id="2_k78yu"]

[node name="Menu Principal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r3kum")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -1068.0
offset_top = -840.0
offset_right = 1492.0
offset_bottom = 611.0
texture = ExtResource("1_ma5c6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 156.0
offset_top = 93.0
offset_right = 388.0
offset_bottom = 332.0

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 122.0
offset_top = 14.0
offset_right = 520.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("2_k78yu")
theme_override_font_sizes/font_size = 50
text = "Neo in the Matrix"

[node name="Settings" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 428.0
offset_top = 142.0
offset_right = 653.0
offset_bottom = 381.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="Audio" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="Back" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 507.0
offset_top = 520.0
offset_right = 611.0
offset_bottom = 559.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -28.0
offset_right = 58.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
text = "FullScreen"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
text = "Borderless"

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="Button" type="Button" parent="Video"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -28.0
offset_right = 280.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 4
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
text = "Music"

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 4

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2

[node name="Button" type="Button" parent="Audio"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
